--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "classnames": "^2.2.5",
         "lodash": "^4.17.4",
         "node-sass-chokidar": "0.0.3",
+        "nuka-carousel": "^3.0.1",
         "numeral": "^2.0.6",
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
