--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-dom": "^16.1.1",
         "react-router-dom": "^4.2.2",
         "react-scripts": "0.9.x",
+        "react-visibility-sensor": "^3.11.0",
         "redux-thunk": "^2.2.0",
         "reselect": "^3.0.1"
     },
