--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "numeral": "^2.0.6",
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
+        "react-render-html": "^0.6.0",
         "react-router-dom": "^4.2.2",
         "react-scripts": "0.9.x",
         "react-visibility-sensor": "^3.11.0",
